[package]
name = "bjc"
version = "0.3.0"
edition = "2021"
description = "BSON <-> JSON decoder and encoder CLI"
authors = ["Hitoshi Otsuki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87" }
