[package]
name = "bjc"
version = "0.4.0"
edition = "2021"
description = "BSON <-> JSON decoder and encoder CLI"
authors = ["Hitoshi Otsuki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.5.0"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.90" }
